# hackathone-physical-AI-humonoid-robtics--Book

./: 404.html  index.html  output.txt  search-index.json  sitemap.xml  sw.js  sw.js.map
assets/css/: styles.1d85ecff.css
assets/js/: 01a85c17.cfe4d186.js  1df93b7f.793b6d91.js  2362.5cc95c1f.js  24a46c67.c4e380d9.js  279b9e56.9bf2230c.js  2cd51233.551d8cab.js  2ebade67.d6fa3108.js  2fb35e53.b78f7808.js  313bd174.2b0d5586.js  3269.159c1eda.js  33fc5bb8.1e327a90.js  393be207.342e54c8.js  3fd826c2.7de09468.js  40703476.ab550bda.js  4334.8ee761a7.js  4809.616904d5.js  59362658.376b25cd.js  59dac300.44abf291.js  6875c492.84302059.js  6be5c0ee.45912e06.js  73664a40.186d418b.js  7661071f.4926c090.js  7cfdbe4c.11fd9263.js  814f3328.b8b06377.js  8365dbd7.ea75c364.js  8717b14a.e7958d96.js  8bedfe63.b6cfe948.js  900811f8.80733786.js  925b3f96.42ff7177.js  9730.cd8947b8.js  9e2cda56.31ae8890.js  a67e1adf.128d548c.js  a6aa9e1f.0caf99fd.js  acecf23e.8535e154.js  ae2629f5.40d228f0.js  b07c595e.8b374d57.js  b1f676fc.ca15ad42.js  ba6547cd.73356ec6.js  cba558a8.91081977.js  ccc49370.b1f13b0f.js  (+11 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
book/module1/: index.html
book/module1-ros2/lesson1/: index.html
book/module1-ros2/lesson2/: index.html
book/module1-ros2/lesson3/: index.html
book/module2/: index.html
book/module2-simulation/lesson1/: index.html
book/module2-simulation/lesson2/: index.html
book/module2-simulation/lesson3/: index.html
book/module3/: index.html
book/module3-isaac/lesson1/: index.html
book/module3-isaac/lesson2/: index.html
book/module3-isaac/lesson3/: index.html
book/module4/: index.html
book/module4-vla/lesson1/: index.html
book/module4-vla/lesson2/: index.html
book/module4-vla/lesson3/: index.html
code/docker/: README.md
code/module1/humanoid_description/: package.xml
code/module1/humanoid_description/urdf/: humanoid.urdf
code/module2/capstone_stability_test/: README.md  package.xml  stability_test.launch.py
code/module2/capstone_stability_test/worlds/: flat_world.world  high_friction_world.world  uneven_terrain.world
code/module2/gazebo_sim/launch/: empty_world.launch.py  spawn_humanoid.launch.py
code/module2/unity_ros_integration/: README.md
code/module3/humanoid_nav2/: package.xml  setup.py
code/module3/humanoid_nav2/config/: humanoid.yaml
code/module3/humanoid_nav2/humanoid_nav2/: nav2_bringup_node.py
code/module3/humanoid_planner/: package.xml  setup.py
code/module3/humanoid_planner/humanoid_planner/: humanoid_planner_node.py
code/module3/humanoid_planner/plugins/: humanoid_planner_plugin.xml
code/module3/isaac_ros_slam/: package.xml  setup.py
code/module3/isaac_ros_slam/isaac_ros_slam/: vslam_node.py
code/module3/isaac_sim_projects/: domain_randomization.py  load_humanoid.py
history/prompts/create-book-spec/: 004-implemented-non-content-tasks.implement.prompt.md  005-update-site-config-and-await-user-input.implement.prompt.md  006-confirmed-theme-color-and-await-user-input.implement.prompt.md  007-awaiting-specific-action.implement.prompt.md  008-updated-footer-color-and-await-user-input.implement.prompt.md  010-footer-text-color-fixed-and-await-user-input.implement.prompt.md  013-add-3d-model-to-homepage-header.implement.prompt.md  015-revert-homepage-to-initial-state.implement.prompt.md  017-update-homepage-call-to-action-button.implement.prompt.md  019-fixed-missing-docusaurus-root-component.implement.prompt.md
img/: robot_arm.glb
markdown-page/: index.html
rag-chatbot/: .env  app.py  ingest.py  main.py  pyproject.toml  rag_system.py
search/: index.html
specs/001-create-book-spec/: tasks.md
urdf/: humanoid.urdf
website/: docusaurus.config.ts
website/docs/module2-simulation/: lesson2.md
website/docs/module3-isaac/: lesson2.md
website/src/components/: ChatbotWidget.module.css  ChatbotWidget.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
website/src/theme/: Root.tsx
website/src/theme/Layout/: Root.tsx
