<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_planner</name>
  <version>0.0.0</version>
  <description>Custom path planner plugin for Nav2 suitable for bipedal locomotion</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_core</depend> # For base planner plugin interface
  <depend>nav_msgs</depend> # For path messages
  <depend>geometry_msgs</depend> # For pose messages

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <nav2_core plugin="${prefix}/humanoid_planner_plugin.xml"/>
  </export>
</package>
